--- a/Responsive-Web-Design/index.html
+++ b/Responsive-Web-Design/index.html
@@ -118,6 +118,9 @@
     All pages should begin with <!DOCTYPE html>. This special string is known as a declaration and ensures the browser tries to meet industry-wide specifications.
     Add this declaration as the first line of the code. -->
 
+    <!-- Step 68
+    One more thing. You should allow people to use their native language. Tell the browser to encode multiple languages by adding a meta element as a child of the head element. Set its charset attribute to UTF-8. -->
+    
     
 
 </body>
