parts of project

--- a/Responsive-Web-Design/nutrition_label/index.html
+++ b/Responsive-Web-Design/nutrition_label/index.html
@@ -10,10 +10,15 @@
 </head>
 <body>
     <div class="label">
-        <h1>Nutrition Facts</h1>
-        <div class="divider"></div>
-        <p>8 servings per container</p>
-        <p>Serving size 2/3 cup (55g)</p>
+        <header>
+            <h1 class="bold">Nutrition Facts</h1>
+            <div class="divider"></div>
+            <p>8 servings per container</p>
+            <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
+        </header>
+        <div class="divider large"></div>
+        <div class="calories-info">
+        </div>
     </div>
     
 </body>
@@ -29,4 +34,7 @@ Good use of white space can bring focus to the important elements of your page, 
 
 <!-- Step 12
 Remember that the use of h1, h2, and similar tags determine the semantic structure of your HTML. However, you can adjust the CSS of these elements to control the visual flow and hierarchy. -->
+
+<!-- Step 18
+The letter-spacing property can be used to adjust the space between each character of text in an element. -->
 
